--- a/app/App1/styles/common.css
+++ b/app/App1/styles/common.css
@@ -18,3 +18,6 @@
     height: 40px;
     background-image: url("../images/icon_td_delete_20_gray@2x.png");
 }
+.trans {
+    transform: translate(10px, 10px);
+}
